# sim-validator-assignment

./: Cargo.toml  Development.md  LICENSE  Makefile  README.md
dl-validator-data/: Cargo.toml
dl-validator-data/src/: lib.rs  near.rs  protocol.rs
dl-validator-data/src/snapshots/: dl_validator_data__near__tests__download_validator_data.snap  dl_validator_data__near__tests__rpc_body_error.snap
sim-validator-assignment/: Cargo.toml
sim-validator-assignment/src/: config.rs  download.rs  main.rs  mocks.rs  partial_seat.rs  run.rs  seat.rs  seat_stats.rs  shard.rs  validator.rs
sim-validator-assignment/src/snapshots/: sim_validator_assignment__config__tests__collect_partial_seats_for_shard.snap  sim_validator_assignment__config__tests__collect_partial_seats_for_shard_errors.snap  sim_validator_assignment__config__tests__collect_seats_for_shard-3.snap  sim_validator_assignment__config__tests__collect_seats_for_shard.snap  sim_validator_assignment__mocks__tests__new_validators.snap  sim_validator_assignment__validator__tests__new_ordered_partial_seats.snap  sim_validator_assignment__validator__tests__new_ordered_seats.snap  sim_validator_assignment__validator__tests__parse_raw_validator_input-2.snap  sim_validator_assignment__validator__tests__parse_raw_validator_input.snap  sim_validator_assignment__validator__tests__validator_seats-2.snap
src/: config.rs  main.rs  mocks.rs  seat.rs  shard.rs  validator.rs
src/snapshots/: sim_validator_assignment__config__tests__collect_seats_for_shard-2.snap  sim_validator_assignment__config__tests__collect_seats_for_shard-4.snap  sim_validator_assignment__config__tests__collect_seats_for_shard.snap  sim_validator_assignment__config__tests__collect_seats_for_shard_errors-2.snap  sim_validator_assignment__config__tests__collect_seats_for_shard_errors.snap  sim_validator_assignment__mocks__tests__new_100.snap  sim_validator_assignment__validator__tests__parse_raw_validator_input.snap  sim_validator_assignment__validator__tests__validator_seats.snap
