[package]
name = "sim-validator-assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.2", features = ["derive"] }
fastrand = "2.0"
num-rational = {version="0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }

[profile.dev.package]
# Optimizing `insta` and `similar` is recommended for faster runs.
# https://insta.rs/docs/quickstart/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3
