[workspace]

members = [
    "dl-validator-data",
    "sim-validator-assignment",
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4.2", features = ["derive"] }
fastrand = "2.0"
insta = { version = "1.31.0", features = ["yaml"] }
num-rational = {version="0.4", features = ["serde"]}
num-traits = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev.package]
# Optimizing `insta` and `similar` is recommended for faster runs.
# https://insta.rs/docs/quickstart/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3
