[package]
name = "sim-validator-assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
fastrand.workspace = true
num-rational.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true
